@@ -1,3 +1,8 @@
+2008-07-20  Eitan Isaacson  <eitan@ascender.com>
+
+	* pyreqs.py: Changed pyatspi version checking to use the new
+	__version__ symbol.
+
 2008-07-08  Eitan Isaacson  <eitan@ascender.com>
 
 	* accerciser.schemas.in: 
